--- a/src/App.css
+++ b/src/App.css
@@ -26,9 +26,16 @@
 }
 
 .tw-followCard-button{
+    cursor: pointer;
     margin-left: 15px;
     border: 0;
     border-radius: 800px;
     padding: 15px 15px;
     font-weight: bold;
+}
+
+.tw-followCard-button:hover{
+    background-color:  #09f;
+    transition: 3s ease  background-color; 
+
 }
