Implemented use of children in the Container component, the follow button is configured

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,6 @@
 }
 
 .tw-followCard-button:hover{
-    background-color:  #09f;
-    transition: 3s ease  background-color; 
-
+    background-color: #09f;
+    transition: .3s ease background-color;
 }
