--- a/src/App.css
+++ b/src/App.css
@@ -27,14 +27,22 @@
 
 .tw-followCard-button{
     cursor: pointer;
-    margin-left: 15px;
+    margin-left: 16px;
     border: 0;
-    border-radius: 800px;
-    padding: 15px 15px;
+    border-radius: 999px;
+    padding: 6px 16px;
     font-weight: bold;
+    border: 1px solid #000;
+    transition: .3s ease background-color;
 }
 
-.tw-followCard-button:hover{
+.tw-followCard-button.is-following {
+    border: 1px soid red;
+}
+
+.tw-followCard-button:hover {
     background-color: #09f;
-    transition: .3s ease background-color;
+}
+.tw-followCard-button.is-following:hover {
+    background: red;
 }
